recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.error
InterleavedHanoi:8: error: not enough arguments for method interleavedHanoi: (height: Int, src1: Int, src2: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
    interleavedHanoi(height-1,src1,dst,other)
                    ^InterleavedHanoi:9: error: not enough arguments for method interleavedHanoi: (height: Int, src1: Int, src2: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
    interleavedHanoi(height-1,src2,dst,other)
                    ^InterleavedHanoi:12: error: not enough arguments for method interleavedHanoi: (height: Int, src1: Int, src2: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
    interleavedHanoi(height-1,other,src2,dst)
                    ^InterleavedHanoi:13: error: not enough arguments for method interleavedHanoi: (height: Int, src1: Int, src2: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
    interleavedHanoi(height-1,other,src1,dst)
                    ^